Fix for wine review being hidden behind wine deal bursts.
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@5498 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/wine.css
+++ b/projects/Media/docroot/assets/css/wine.css
@@ -790,6 +790,7 @@ div.nav_sub
         border: 2px solid #9B6644;
         padding: 15px;
         width: 220px;
+		z-index: 9999;
     }
 
 .wine_review b
